force-app/main/default/objects/Order_Line_Item__c/fields/Discount_Channel__c.field-meta.xml
<CustomField>
    <fullName>Discount_Channel__c</fullName>
    <label>Discount Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>