force-app/main/default/objects/Order_Line_Item__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>