force-app/main/default/objects/Order_Line_Item__c/fields/Full_Price_Ex_VAT__c.field-meta.xml
<CustomField>
    <fullName>Full_Price_Ex_VAT__c</fullName>
    <label>Full Price Ex VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>