force-app/main/default/objects/Order_Line_Item__c/fields/Full_Price_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Full_Price_Inc_VAT__c</fullName>
    <label>Full Price Inc VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>