force-app/main/default/objects/Order_Line_Item__c/fields/Mark_Down_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Mark_Down_Inc_VAT__c</fullName>
    <label>Mark Down Inc VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>