force-app/main/default/objects/Order_Line_Item__c/fields/Offered_Price_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Offered_Price_Inc_VAT__c</fullName>
    <label>Offered Price Inc VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>