force-app/main/default/objects/Order_Line_Item__c/fields/Order_Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item_Status__c</fullName>
    <label>Order Line Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Received and refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>