force-app/main/default/objects/Order_Line_Item__c/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <label>Product Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Brand</valueSetName>
    </valueSet>
</CustomField>