force-app/main/default/objects/Order_Line_Item__c/fields/Product_Flavour__c.field-meta.xml
<CustomField>
    <fullName>Product_Flavour__c</fullName>
    <label>Product Flavour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Flavour</valueSetName>
    </valueSet>
</CustomField>