force-app/main/default/objects/Order_Line_Item__c/fields/Promotion_Value_Ex_VAT__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Value_Ex_VAT__c</fullName>
    <label>Promotion Value Ex VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>