force-app/main/default/objects/Order_Line_Item__c/fields/Promotion_Value_Percentage_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Value_Percentage_Inc_VAT__c</fullName>
    <label>Promotion Value Percentage Inc VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>