force-app/main/default/objects/Order_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Country__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Brand__c</columns>
    <columns>Product_Flavour__c</columns>
    <columns>Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>